<resources>
    <string name="app_name">DPoints User</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_setting">Setting</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="no_data_available">No Data Available</string>
    <string name="there_is_no_data_to_show_you_right_now">There is no data to show you right now.</string>
    <string name="continues">Continue</string>
    <string name="no_internet">No Internet</string>
    <string name="please_wait_till_it_s_back_and_try_again">Please wait till it’s back and try again</string>
    <string name="transaction_id">Transaction ID:</string>
    <string name="order_id">Order ID : </string>
    <string name="enter_username">Enter Username</string>
    <string name="username">Username</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="sign_in_email">Sign in with Email</string>
    <string name="sign_up_email">Sign up with Email</string>
    <string name="email">Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="request_error">Sorry! We are unable to process your request. Please try after some time.</string>
    <string name="connection_error">Failed to connect. Make sure you have an active internet connection.</string>
    <string name="okay">Okay</string>
    <string name="submit">Submit</string>
    <string name="or_login_using">Or login using</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="my_offers">My Offers</string>
    <string name="gift_card">Gift Cards</string>
    <string name="membership_card">MemberShip Card</string>
    <string name="points_collected">Points Collected</string>
    <string name="assign">Assign</string>
    <string name="edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="redeem">Redeem</string>
    <string name="all_offers">All Offers</string>
    <string name="offer_name">Offer Name</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="amazing_offer">This is amazing offer</string>
    <string name="amount">1400</string>
    <string name="shopping_text">20 DPoints on Shopping of 1000</string>
    <string name="this_is_amazing_contrary_to_popular_belief_amazing_contrary_to_popular_belief">This is Amazing Contrary to popular belief.</string>
    <string name="we_have_send_the_otp_on">We have send the otp on</string>
    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerClose</string>
    <string name="dumy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="facebook_app_id">464066041143169</string>
    <string name="fb_login_protocol_scheme">fb464066041143169</string>
    <string name="earn_offer">Earn Offer</string>
    <string name="update">Update</string>
</resources>