<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:id="@+id/root_view">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dimen_16"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_marginTop="36dp"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/dpoint_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/ic_user" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="Enter email"
                    android:id="@+id/et_email"
                    android:padding="5dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <View style="@style/underline" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="36dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:adjustViewBounds="true"
                    android:padding="@dimen/dimen_4"
                    app:srcCompat="@drawable/ic_password" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:hint="@string/enter_password"
                    android:padding="5dp"
                    android:maxLength="15"
                    android:inputType="textPassword"
                    android:id="@+id/et_password"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:padding="10dp"
                    android:id="@+id/iv_show_password"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/ic_show_password" />
            </LinearLayout>

            <View style="@style/underline" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|right"
                android:layout_margin="@dimen/dimen_8"
                android:padding="8dp"
                android:id="@+id/forgotPass"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_colorprimary"
                android:text="@string/login"
                android:id="@+id/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_marginTop="35dp"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="36dp"
                android:orientation="horizontal">

                <View
                    style="@style/underline"
                    android:layout_weight="1"
                    android:layout_marginLeft="24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or_login_using"
                    android:textSize="18sp"
                    android:layout_margin="@dimen/dimen_16" />

                <View
                    style="@style/underline"
                    android:layout_marginRight="24dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/fb_login"
                android:layout_marginBottom="@dimen/dimen_20"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_16"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:layout_margin="@dimen/dimen_8"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/ic_fb" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/facebook"
                        android:textColor="@color/color_text_1"
                        android:textSize="18sp" />
                </LinearLayout>

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dimen_8"
                    android:layout_marginBottom="@dimen/dimen_8"
                    android:layout_marginLeft="28dp"
                    android:layout_marginRight="28dp"
                    android:background="@color/color_line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/google_login"
                    android:gravity="center|left"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:layout_margin="@dimen/dimen_8"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/ic_google" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/google"
                        android:textColor="@color/color_text_1"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:textColor="@color/color_text_1"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:id="@+id/signUp"
            android:padding="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>
</LinearLayout>